pkg/controller/envoyplugin/test/f1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  namespace: test
  name: e1
spec:
  workloadSelector:
    labels:
      app: gateway-proxy
  configPatches:
    - applyTo: HTTP_ROUTE
      match:
        routeConfiguration:
          vhost:
            route:
              name: 1505
      patch:
        operation: MERGE
        value:
          typedPerFilterConfig:
            com.netease.transformations:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: ""
              value:
